{
    "name": "InputActions",
    "maps": [
        {
            "name": "Scenario",
            "id": "d4b2ac84-b644-4064-8d86-050b751b881f",
            "actions": [
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "c2f03923-e791-4d0b-b180-ea946d1bf920",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "1b0219aa-f100-4467-84db-99c7c2af8438",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7059980c-ae9c-46b3-a179-f7373ceed352",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "404814e6-ac63-40a6-885a-89b79bcbbf69",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cefcf41e-6f2d-46e4-9a7a-5d2552e0669c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "391b0f02-8f93-4e7d-bee8-ba09aa31eeab",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "ea4862f0-563d-4825-a416-7239cec3e73f",
            "actions": [
                {
                    "name": "PanelPause",
                    "type": "Button",
                    "id": "8e5dee76-c5f7-411a-a5a9-bcfb3688278d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayAction",
                    "type": "Button",
                    "id": "9a9c08a4-50f4-44d1-b15f-4516f535af9c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitAction",
                    "type": "Button",
                    "id": "d33b4dde-be1d-470a-bb8a-7935787a9c06",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02be230b-8851-4d88-b09d-909d34af88bc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanelPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "035e3bb2-032f-429b-ac95-4483f91a7aaa",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanelPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d26e7fe3-9719-4214-963d-dd0efead0c32",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d26b7ea8-556b-4f76-9976-5735d5a99d44",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}